RESOLVED FIXED108682
[GStreamer] media/video-controls-fullscreen-volume.html crashes
https://bugs.webkit.org/show_bug.cgi?id=108682
Summary [GStreamer] media/video-controls-fullscreen-volume.html crashes
Philippe Normand
Reported 2013-02-01 13:21:58 PST
#0 0x00002ac0201b50b4 in WebCore::FullscreenVideoControllerGtk::muteChanged (this=<error reading variable: Cannot access memory at address 0x7fffceffffe8>, this@entry=<error reading variable: Cannot access memory at address 0x7fffcf000008>) at ../../Source/WebCore/platform/graphics/gtk/FullscreenVideoControllerGtk.cpp:343 343 gtk_scale_button_set_value(GTK_SCALE_BUTTON(m_volumeButton), m_player->muted() ? 0 : m_player->volume()); Maybe a signal handler is not disconnected correctly.
Attachments
Patch (11.60 KB, patch)
2013-02-10 05:37 PST, Philippe Normand
no flags
Patch (1.49 KB, patch)
2017-08-18 08:50 PDT, Ms2ger (he/him; ⌚ UTC+1/+2)
no flags
Philippe Normand
Comment 1 2013-02-01 13:22:44 PST
Also crashing but no crash log: media/video-controls-visible-exiting-fullscreen.html media/video-src.html
Philippe Normand
Comment 2 2013-02-01 13:28:03 PST
Flagged in r141636
Philippe Normand
Comment 3 2013-02-10 05:37:31 PST
Philippe Normand
Comment 4 2013-02-10 09:31:32 PST
Philippe Normand
Comment 5 2013-02-11 00:34:47 PST
The issue is still happening on the Debug bot. Going to flag tests and upload a new patch. I don't think the current one needs to be rolled out.
Philippe Normand
Comment 6 2014-03-04 23:59:29 PST
Native fullscreen video display support was removed. Closing.
Ms2ger (he/him; ⌚ UTC+1/+2)
Comment 7 2017-08-18 08:50:35 PDT
Reopening to attach new patch.
Ms2ger (he/him; ⌚ UTC+1/+2)
Comment 8 2017-08-18 08:50:37 PDT
WebKit Commit Bot
Comment 9 2017-08-21 01:28:52 PDT
Comment on attachment 318500 [details] Patch Clearing flags on attachment: 318500 Committed r220961: <http://trac.webkit.org/changeset/220961>
WebKit Commit Bot
Comment 10 2017-08-21 01:28:54 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2017-08-21 01:29:34 PDT
Note You need to log in before you can comment on or make changes to this bug.