Source/WebCore/platform/graphics/gtk/FullscreenVideoControllerGtk.cpp
@@ -131,6 +131,7 @@ FullscreenVideoControllerGtk::FullscreenVideoControllerGtk(MediaPlayerPrivateGSt
     , m_seekLock(false)
     , m_window(0)
     , m_hudWindow(0)
+    , m_volumeButton(0)
     , m_keyPressSignalId(0)
     , m_destroySignalId(0)
     , m_isActiveSignalId(0)
@@ -332,6 +333,9 @@ void FullscreenVideoControllerGtk::playStateChanged()
 
 void FullscreenVideoControllerGtk::volumeChanged()
 {
+    if (!m_volumeButton)
+        return;
+
     g_signal_handler_block(m_volumeButton, m_volumeUpdateId);
     gtk_scale_button_set_value(GTK_SCALE_BUTTON(m_volumeButton), m_player->volume());
     g_signal_handler_unblock(m_volumeButton, m_volumeUpdateId);
@@ -339,6 +343,9 @@ void FullscreenVideoControllerGtk::volumeChanged()
 
 void FullscreenVideoControllerGtk::muteChanged()
 {
+    if (!m_volumeButton)
+        return;
+
     g_signal_handler_block(m_volumeButton, m_volumeUpdateId);
     gtk_scale_button_set_value(GTK_SCALE_BUTTON(m_volumeButton), m_player->muted() ? 0 : m_player->volume());
     g_signal_handler_unblock(m_volumeButton, m_volumeUpdateId);
